--- a/Exos-JQuery/exo-1/index.html
+++ b/Exos-JQuery/exo-1/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="script.js"></script>
+        
     </head>
     <body>
         <h1>Exercice 1</h1>
