--- a/Exos-JQuery/exo-5/index.html
+++ b/Exos-JQuery/exo-5/index.html
@@ -6,12 +6,16 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <script src="script.js"></script>
+    
 </head>
 
 <body>
     <div class="container">
+        <img id="rock" src="Rock.png" height="200px">
+        <img id="paper" src="Paper.png" height="200px">
+        <img id="scissor" src="Scissor.png" height="200px">
     </div>
 </body>
-
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="script.js"></script>
 </html>
