--- a/Exos-JQuery/exo-7/index.html
+++ b/Exos-JQuery/exo-7/index.html
@@ -6,13 +6,25 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <script type="text/javascript" src="DATA.js"></script>
-    <script src="script.js"></script>
+    
 </head>
 
 <body>
     <div class="container">
+        <table id=tableau class="table table-striped table-dark table-bordered">
+            <thead class="thead-light">
+                <tr>
+                    <td scope="col">Email</td>
+                    <td scope="col">Nom</td>
+                    <td scope="col">Prénom</td>
+                    <td scope="col">Téléphone</td>
+                </tr>
+            </thead>
+        </table>
     </div>
+  
 </body>
-
+<script type="text/javascript" src="DATA.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="script.js"></script>  
 </html>
